# farm

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  TODOS.md  pyproject.toml  record_cams.py  ruff.toml
.claude/: CLAUDE.md
analysis/: README.md  (+2 more)
farm-edge-agent/: pyproject.toml
farm-edge-agent/assets/urdf/uf850/: uf850.mjcf  uf850.urdf
farm-edge-agent/src/farm/: __init__.py
farm-edge-agent/src/farm_edge_agent/: __init__.py  client.py  errors.py  recorder.py  run_loop.py
farm-edge-agent/src/farm_edge_agent/backends/: __init__.py  base.py  classical.py  sim_backend.py  xarm_backend.py
farm-edge-agent/src/farm_edge_agent/cameras/: cam_server.py  realsense.py
farm-edge-agent/src/farm_edge_agent/capability_cards/: __init__.py  loader.py  validator.py
farm-edge-agent/src/farm_edge_agent/cli/: main.py
farm-edge-agent/src/farm_edge_agent/config/: __init__.py  doctor.py  schema.py  template.yaml
farm-edge-agent/src/farm_edge_agent/doctor/: __init__.py  cameras.py  network.py  real_arm.py  runner.py
farm-edge-agent/src/farm_edge_agent/drivers/: __init__.py  _xarm_sdk_shim.py  lerobot_mock.py  xarm.py
farm-edge-agent/src/farm_edge_agent/policies/: __init__.py  pi05.py
farm-edge-agent/src/farm_edge_agent/protocol/: __init__.py  client.py  handshake.py  messages.py
farm-edge-agent/src/farm_edge_agent/recovery/: __init__.py  handoff.py  primitives.py
farm-edge-agent/src/farm_edge_agent/ros_bridge/: bridge.py  messages.py  wire.py
farm-edge-agent/src/farm_edge_agent/run_record/: __init__.py  exporter.py  reader.py  schema.py  writer.py
farm-edge-agent/src/farm_edge_agent/safety/: __init__.py  calibration.py  enforcer.py  envelope.py  estop.py  factory.py  singularity.py  velocity.py  watchdog.py
farm-edge-agent/src/farm_edge_agent/server/: __init__.py  app.py  supervisor.py
farm-edge-agent/src/farm_edge_agent/sim/: __init__.py  driver.py
farm-edge-agent/src/farm_edge_agent/skills/: __init__.py  executor.py  gpt_planner.py  library.py  planner.py
farm-edge-agent/src/farm_edge_agent/web/: index.html  review.html
farm-edge-agent/tests/: test_client.py  test_errors.py  test_version.py
farm-edge-agent/tests/backends/: test_classical.py
farm-edge-agent/tests/capability_cards/: test_loader.py  test_validator.py
farm-edge-agent/tests/capability_cards/fixtures/: invalid_action_space.yaml  missing_required.yaml  valid_pi05.yaml
farm-edge-agent/tests/cli/: test_help.py  test_main.py
farm-edge-agent/tests/config/: test_doctor.py  test_loader.py  test_template.py
farm-edge-agent/tests/doctor/: test_cameras.py  test_network.py  test_real_arm.py
farm-edge-agent/tests/drivers/: test_lerobot_mock.py  test_xarm.py
farm-edge-agent/tests/drivers/fixtures/: xarm_motion_log.jsonl
farm-edge-agent/tests/protocol/: test_client.py  test_handshake.py  test_messages.py
farm-edge-agent/tests/recovery/: test_handoff.py  test_primitives.py
farm-edge-agent/tests/ros_bridge/: test_wire.py
farm-edge-agent/tests/run_record/: test_exporter.py  test_reader.py  test_writer.py
farm-edge-agent/tests/run_record/fixtures/: sample_run.jsonl
farm-edge-agent/tests/safety/: test_calibration.py  test_enforcer.py  test_envelope.py  test_estop.py  test_singularity.py  test_velocity.py  test_watchdog.py
farm-edge-agent/tests/server/: test_app.py
farm-edge-agent/tests/sim/: test_sim.py
farm-shared/: README.md  pyproject.toml
farm-shared/src/farm_shared/: capability_card.py  errors.py  protocol.py  run_state.py
farm-shared/src/farm_shared/schemas/: capability_card.v1.json  run_record.v1.json
farm-shared/tests/: test_capability_card.py  test_protocol.py  test_run_state.py
shared/: pyproject.toml
shared/src/farm_shared/: errors.py
shared/tests/: test_errors.py  test_version.py
teleop/edge-agent/: README.md  pyproject.toml
teleop/edge-agent/src/farm_edge_agent/: __init__.py  one_euro.py
teleop/edge-agent/tests/cli/: test_main.py
teleop/edge-agent/tests/config/: test_doctor.py  test_loader.py  test_template.py
teleop/edge-agent/tests/server/: test_app.py  test_train.py
teleop/edge-agent/tests/sim/: test_sim.py
(+453 files in other folders)
