[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farm-edge-agent"
version = "0.0.1"
description = "FARM Edge Agent: local CLI, drivers, safety, recovery, and run records."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
yaml = ["PyYAML>=6.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/farm_edge_agent", "src/farm"]
