[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farm-edge-agent"
version = "0.0.1"
description = "FARM Edge Agent: local CLI, drivers, safety, recovery, and run records."
requires-python = ">=3.12"
dependencies = [
    "farm-shared @ {root:uri}/../farm-shared",
    "click>=8.1",
]

[project.scripts]
farm = "farm_edge_agent.cli.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/farm_edge_agent"]
