[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farm-edge-agent"
version = "0.0.1"
description = "FARM Edge Agent: local CLI, drivers, safety, recovery, and run records."
requires-python = ">=3.12"
dependencies = [
    "farm-shared @ {root:uri}/../farm-shared",
    "click>=8.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pandas>=2.0",
]
arm = ["xarm-python-sdk>=1.17"]

[project.scripts]
farm = "farm_edge_agent.cli.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/farm_edge_agent"]

[tool.pytest.ini_options]
pythonpath = ["src", "../farm-shared/src"]
testpaths = ["tests"]
