[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farm-shared"
version = "0.0.1"
description = "Cross-package data contracts for FARM."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/farm_shared"]

[tool.hatch.build.targets.wheel.force-include]
"src/farm_shared/schemas" = "farm_shared/schemas"
