[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farm-shared"
version = "0.0.1"
description = "Shared error catalog for FARM."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/farm_shared"]
