[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farm-edge-agent"
version = "0.0.1"
description = "FARM Edge Agent — Pi0.5 + UFactory 850 agent harness."
requires-python = ">=3.12"
dependencies = [
    "farm-shared @ {root:uri}/../../shared",
    "click>=8.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "aiohttp-cors>=0.7",
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
arm = ["xarm-python-sdk>=1.17"]
sim = ["mujoco>=3.1"]

[project.scripts]
farm = "farm_edge_agent.cli.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/farm_edge_agent", "src/farm"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../shared/src"]
testpaths = ["tests"]
asyncio_mode = "auto"
